// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Account Avatar should match text snapshot 1`] = `
<div>
  <button
    class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-zm4jr-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Click Here
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Testing Account Avatar should match the default snapshot 1`] = `
<div>
  <button
    class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-zm4jr-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Click Here
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Testing Account Avatar should match the outlined button 1`] = `
<div>
  <button
    class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-ep45t5-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Click Here
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;
